--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect">
     <link href="css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Start Inaama Two</title></head>
+    <title>Inaama Startup</title></head>
 <body data-disable-animations-onmobile="true" data-mobile-header-builder="true" data-mobile-header-scheme="gray"
       data-mobile-logo-alignment="default" data-mobile-nav-breakpoint="1199" data-mobile-nav-scheme="dark"
       data-mobile-nav-style="modern" data-mobile-nav-trigger-alignment="right" data-overlay-onmobile="true">
